--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html lang="en"><head>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, shrink-to-fit=no">
 <title>Receipt</title>
 <style media="screen" type="text/css">a:hover {color:#187ffc !important;border-bottom-color:rgba(24, 127, 252, 0.25) !important}
 .pseudo:hover {color:#187ffc !important;border-bottom-color:rgba(24, 127, 252, 0.25) !important}
