--- a/2.html
+++ b/2.html
@@ -95,6 +95,7 @@
       .receipt-cell {
         float: none !important;
         width: auto !important;
+        min-width: 0 !important;
       }
       .receipt-left-inner,
       .receipt-right-inner {
